grammar.js
    source_file: $ => repeat(
      choice($._terminator, $.shebang, $.inner_attribute, $._statement),
    ),

    // [gram.lex.shebang] — trivia line; only meaningful at offset 0,
    // and never when `[` follows the `#!`: `#![…]` is the file-wide
    // attribute opener ([gram.attr.index]).
    _terminator: $ => choice(';', $._newline),
    _statement: $ => choice(
      $.function_item,
      $.struct_item,
      $.enum_item,
      $.type_item,
      $.trait_item,
      $.impl_item,
      $.use_declaration,
      $.import_c_declaration,
      $.let_declaration,
      $.var_declaration,
      $.const_declaration,
      $.error_item,
      $.assignment_statement,
      $.defer_statement,
      $.assume_statement,
      $.expression_statement,
    ),

    expression_statement: $ => seq(repeat($.attribute), $._expression),

    // Assignment is a statement, not an expression [gram.expr.assign].
    // `place` is any expression; place-ness is sema's check, not grammar's.
    //
    // The second arm is the one moded store (s182, wolf-lang#438, v0.2.17):
    // a plain `=` whose place is a container element may spell `take` on
    // its right-hand side — `xs[i] = take v`, `m[k] = take v` — and
    // nowhere else in an assignment may a mode appear. `x = take v`,
    // `s.f = take v`, `xs[0].f = take v` and every compound operator's
    // right-hand side stay ERROR nodes, as they stay E0201 in the
    // compiler. The left is `index_expression` because that is exactly
    // the compiler's test (`crates/wolf_parse/src/exprs.rs`: plain `=`,
    // a `BracketApply` head, then `Kw(Take)`) — the one postfix bracket
    // shape of [gram.amb.brackets]; whether the bracket is a container is
    // sema's. `take` is a token of the statement, not an expression and
    // not a `parameter_mode` (which would admit `mut`), so it is an
    // anonymous token under a `mode` field: no new node type, and
    // highlights.scm already paints `"take"`.
    function_item: $ => prec.right(seq(
      repeat($.attribute),
      optional($.visibility_modifier),
      repeat($.function_qualifier),
      'fn',
      field('name', $.identifier),
      optional(field('type_parameters', $.generic_parameters)),
      field('parameters', $.parameters),
      optional(seq('->', field('return_type', $._type))),
      optional(field('body', $.block)),   // bodyless: extern / trait member
    )),

    parameters: $ => seq('(', commaSep($._parameter), ')'),

    _parameter: $ => choice($.parameter, $.self_parameter),

    parameter_mode: _ => choice('mut', 'take'),

    // ------------------------------- bindings & constants [gram.item.let]

    // D63 comma groups: one keyword, several *complete* binders — each
    // with its own pattern, optional ascription, and initializer
    // (`var i = 0, c = 1`). Unambiguous by construction: every binder
    // has its own `=`, and wolf has no unparenthesized tuple
    // expressions, so a comma at statement depth begins the next binder.
    let_declaration: $ => seq(
      repeat($.attribute),
      optional($.visibility_modifier),
      'let',
      $.binder,
      repeat(seq(',', $.binder)),
    ),

    binder: $ => seq(
      field('pattern', $._pattern),
      optional(seq(':', field('type', $._type))),
      '=',
      field('value', $._expression),
    ),

    _type: $ => choice(
      $.type_path,
      $.error_union_type,
      $.rowed_type,
      $.aliased_error_type,
      $.prefixed_type,
      $.pointer_type,
      $.dyn_type,
      $.tuple_type,
      $.unit_type,
      $.function_type,
      alias('type', $.type_keyword),      // the type of types (comptime)
      alias('region', $.region_type),     // first-class regions (X4)
    ),

    type_path: $ => prec.right(seq($.path, optional(field('type_arguments', $.type_arguments)))),

    path: $ => prec.right(seq($.identifier, repeat(seq('.', $.identifier)))),

    // `!T` — error union with inferred private row (D30).
    error_union_type: $ => prec.right(1, seq('!', $._type)),

    // `T ! {row}` — postfix row, first-class in every type position;
    // nested rows flatten ([gram.type.row.flatten], D51).
    prefixed_type: $ => prec.right(seq(
      field('modifier', choice('shared', 'handle', 'weak', 'distinct')),
      $._type,
    )),

    _pattern: $ => choice($._closed_pattern, $.or_pattern),

    _closed_pattern: $ => choice(
      alias('_', $.wildcard_pattern),
      $._literal_pattern,
      $.range_pattern,
      $.identifier,
      $.path_pattern,
      $.tuple_pattern,
      $.constructor_pattern,
      $.struct_pattern,
      $.at_pattern,
    ),

    // [gram.pat.range] (s147, wolf-lang#287) — `match` in statement
    // position is wolf's switch, and the range arm is what the pattern
    // grammar lacked. `lo..hi` stops before `hi`, `lo..=hi` includes it.
    //
    //   closed_pattern ::= ... | literal ('..' | '..=') literal
    //
    // The production requires BOTH ends: `..hi` and `lo..` are the slice
    // spellings of [gram.expr.primary], not patterns, and the compiler
    // refuses them here (E0201) with a note naming the range form — so
    // nothing admits an open end. Whether the two endpoints agree on a
    // type (E0401), carry an order (E0808), or describe an empty range
    // (`5..5`, `9..=3`, E0815) is sema's; the grammar sees two literals.
    _expression: $ => choice(
      $.identifier,
      $._literal,
      $.unary_expression,
      $.reference_expression,
      $.binary_expression,
      $.cast_expression,
      $.range_expression,
      $.from_end_expression,
      $.else_expression,
      $.call_expression,
      $.index_expression,
      $.field_expression,
      $.try_expression,
      $.list_expression,
      $.parenthesized_expression,
      $.tuple_expression,
      $.unit_expression,
      $.moded_receiver,
      $.struct_expression,
      $.block,
      $.if_expression,
      $.match_expression,
      $.for_expression,
      $.while_expression,
      $.loop_expression,
      $.closure_expression,
      $.region_expression,
      $.in_expression,
      $.scope_expression,
      $.select_expression,
      $.when_expression,
      $.unsafe_expression,
      $.spawn_expression,
      $.asm_expression,
      $.borrow_expression,
      $.return_expression,
      $.break_expression,
      $.continue_expression,
    ),

    // ------------------------------------------ blocks [gram.expr.block]

    // `block ::= '{' stmt* expr? '}'` with every stmt production ending
    // in TERM (`expr_stmt ::= expr TERM`, `let_item ::= … TERM`, …):
    // a statement is terminated, the block's trailing expression is not.
    //
    // le05 takes the TERM literally, because without it D69's struct
    // literal has an escape hatch. `let p = Point { x y }` cannot be a
    // struct_expression — `field_initializer_list` has always demanded
    // the separator — but GLR would re-read it as `let p = Point`
    // followed by a bare block statement `{ x y }` holding two
    // unterminated expression statements, and hand back a clean tree
    // where wolfc reports E0201. Requiring the TERM kills that reading
    // at its second statement, and the ERROR lands on the missing
    // separator. Measured: 104/104 corpus cases, 463 corpus files at
    // zero ERRORs, and a 21-spelling battery of legal one-liners,
    // tail expressions, nested items and comments all still parse.
    block: $ => seq(
      '{',
      repeat(choice($._terminator, seq($._statement, $._terminator))),
      optional($._statement),
      '}',
    ),

    // --------------------------------- operators & climb [gram.expr.prec]

    unary_expression: $ => prec(PREC.UNARY, seq(
      field('operator', choice('!', '-', '*', 'move', 'copy', 'shared', 'freeze')),
      field('operand', $._expression),
    )),

    // Tier-0 local borrows: `&x`, `&mut x` (second-class at boundaries).
    reference_expression: $ => prec(PREC.UNARY, seq(
      '&',
      optional('mut'),
      field('operand', $._expression),
    )),

    binary_expression: $ => {
      const table = [
        [PREC.MUL, choice('*', '/', '%')],
        [PREC.ADD, choice('+', '-')],
        [PREC.SHIFT, choice('<<', '>>')],
        [PREC.BITAND, '&'],
        [PREC.BITXOR, '^'],
        [PREC.BITOR, '|'],
        [PREC.COMPARE, choice('==', '!=', '<', '>', '<=', '>=', '<=>')],
        [PREC.AND, '&&'],
        [PREC.OR, '||'],
      ];
      return choice(...table.map(([p, op]) => prec.left(p, seq(
        field('left', $._expression),
        field('operator', op),
        field('right', $._expression),
      ))));
    },

    cast_expression: $ => prec.left(PREC.CAST, seq(
      field('value', $._expression),
      'as',
      field('type', $._type),
    )),

    range_expression: $ => choice(
      prec.left(PREC.RANGE, seq(
        field('start', $._expression),
        field('operator', choice('..', '..=')),
        optional(field('end', $._expression)),
      )),
      prec.left(PREC.RANGE, seq(
        field('operator', choice('..', '..=')),
        field('end', $._expression),
      )),
    ),

    // `^n` — from-end endpoint (D25): `s[^1]`, `s[^13..]`, `s[..^1]`.
    // Binds tighter than the range operator: `^13..` is `(^13)..`.
    from_end_expression: $ => prec.left(PREC.RANGE + 1, seq('^', $._expression)),

    // `expr else fallback` — defaulting operator, loosest tier;
    // `expr else |pat| handler` binds the error ([gram.expr.primary]).
    else_expression: $ => prec.right(PREC.ELSE, seq(
      field('value', $._expression),
      newlineThenElse($),
      field('fallback', choice(
        $.else_handler,
        $._expression,
      )),
    )),

    else_handler: $ => prec.right(seq(
      '|',
      field('binding', $._closed_pattern),
      '|',
      field('body', $._expression),
    )),

    // ------------------------------------- postfix [gram.expr.primary]

    call_expression: $ => prec(PREC.POSTFIX, seq(
      field('function', $._expression),
      field('arguments', $.arguments),
    )),

    // Call-site modes (X1): `f(mut x)`, `f(take conn)`.
    arguments: $ => seq('(', commaSep($.argument), ')'),

    argument: $ => seq(optional($.parameter_mode), $._expression),

    // `e[…]` — one postfix shape for indexing AND generic application
    // [gram.amb.brackets]; admits type-only argument forms.
    index_expression: $ => prec(PREC.POSTFIX, seq(
      field('value', $._expression),
      '[',
      commaSep($._index_arg),
      ']',
    )),

    _index_arg: $ => choice(
      seq(optional($.parameter_mode), $._expression),
      $.prefixed_type,
      $.function_type,
      $.pointer_type,
      $.dyn_type,
      $.error_union_type,
      alias('region', $.region_type),
    ),

    // Member position is keyword-transparent; tuple access is `.0`.
    field_expression: $ => prec(PREC.POSTFIX, seq(
      field('value', $._expression),
      '.',
      field('field', reserved('member', choice($.identifier, $.integer_literal))),
    )),

    try_expression: $ => prec(PREC.POSTFIX, seq(
      field('value', $._expression),
      '?',
    )),

    // ------------------------------------- primaries [gram.expr.primary]

    // `[a, b, c]` — s158 (wolf-lang#154), [gram.expr.list].
    //
    // The bracket clash with `index_expression` is settled by POSITION
    // and nothing else ([gram.amb.brackets]): a `[` that BEGINS an
    // operand opens a literal, a `[` that CONTINUES one is the postfix
    // subscript. `[10, 20, 30][1]` is both, in that order.
    //
    // No conflict is declared and none is needed, but not for the
    // reason the upstream issue gives — it argues the two rules are
    // separated by living in `primary` and the postfix chain, and this
    // grammar has no `primary` node at all (`_expression` is flat, and
    // `index_expression` takes `field('value', $._expression)`). What
    // actually separates them is the TERMINATOR: `index_expression`
    // can only shift its `[` in a state that has an expression on the
    // stack, and `block`/`source_file` admit a following statement
    // only after a `_terminator`, so `xs\n[1]` is two statements and
    // `xs[1]` is one subscript. The newline carries the distinction,
    // which is why `_newline` is a real token here and not just extra.
    list_expression: $ => seq('[', commaSep($._expression), ']'),

    parenthesized_expression: $ => seq('(', $._expression, ')'),

    tuple_expression: $ => seq(
      '(',
      $._expression,
      ',',
      optional(seq($._expression, repeat(seq(',', $._expression)), optional(','))),
      ')',
    ),

    moded_receiver: $ => seq(
      '(',
      $.parameter_mode,
      $._expression,
      ')',
    ),

    // `Point { x: 0, y }` — struct literal; illegal in condition/scrutinee
    // position, which GLR + dynamic precedence resolves [gram.amb.structlit].
    struct_expression: $ => prec.dynamic(1, seq(
      field('name', $.type_path),
      field('body', $.field_initializer_list),
    )),

    field_initializer_list: $ => seq(
      '{',
      commaSep(choice($.field_initializer, $.shorthand_field_initializer)),
      '}',
    ),

    field_initializer: $ => seq(
      field('name', $.identifier),
      ':',
      field('value', $._expression),
    ),

    shorthand_field_initializer: $ => $.identifier,

    // ------------------------------------ control flow [gram.expr.flow]

    // [gram.expr.if] — s151 (wolf-lang#307) gave `if` a second spelling:
    //
    //   if_expr ::= 'if' expr 'then'? block ('else' (if_expr | block))?
    //             | 'if' expr 'then' expr  ('else' (if_expr | expr))?
    //
    // `then` is CONTEXTUAL, never reserved (it is absent from the ebnf's
    // `reserved_kw`). It is the keyword in exactly one position: after a
    // complete `if` condition. Everywhere else the word lexes as
    // `identifier` — `let then = true`, `if then { … }`, and
    // `less.then(greater)` after a `.`. Nothing here enforces that; it
    // falls out of `word: $ => $.identifier` plus LR state. Keyword
    // extraction only hands back the `then` token in the states that
    // admit it, and no other state does: member position takes
    // `identifier` (field_expression), and the condition's own
    // expression position has not reached the post-condition state yet,
    // which is why `if then then 1 else 0` reads the identifier first
    // and the keyword second.
    //
    // The braced branch outranks the bare one on `if c then { … }` (a
    // block is also an expression): that is the ebnf's own order, and it
    // keeps `consequence` a `block` node wherever braces are written.
    //
    // The bare form sits above PREC.ELSE so the `if`'s own `else` binds
    // before `else_expression`'s defaulting `else` ([gram.amb.else]) —
    // `if c then (parse(a) else 0) else 1` is why those parens are
    // load-bearing and the formatter keeps them.
    if_expression: $ => choice(
      prec.right(PREC.IF_BRACED, seq(
        'if',
        field('condition', $._expression),
        optional('then'),
        field('consequence', $.block),
        optional(seq(
          newlineThenElse($),
          field('alternative', choice($.if_expression, $.block)),
        )),
      )),
      prec.right(PREC.IF_BARE, seq(
        'if',
        field('condition', $._expression),
        'then',
        field('consequence', $._expression),
        optional(seq(
          newlineThenElse($),
          field('alternative', $._expression),
        )),
      )),
    ),

    closure_expression: $ => prec.right(seq(
      'fn',
      field('parameters', $.closure_parameters),
      field('body', $._expression),
    )),

    closure_parameters: $ => seq('(', commaSep($.closure_parameter), ')'),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        $._string_content,
        $.escape_sequence,
        $.invalid_escape,
        $.brace_escape,
        $.interpolation,
      )),
      '"',
    ),
